Clean up build.xml
Also make things more standard (I think)